update operation instrcution

--- a/options.html
+++ b/options.html
@@ -31,9 +31,9 @@ input, select, label{vertical-align:baseline;}
 		</li>
 		<li id="hotKeyLi">
 			<select id="hotKey">
-				<option value="none">None</option>
+				<option value="none">----</option>
 				<option value="ctrl">Ctrl</option>
-				<option value="alt">Alt</option>
+				<option value="alt">Alt / Option</option>
 				<option value="shift">Shift</option>
 			</select>
 			<label for="hotKey" id="hotKeyLabel"></label>
