refine mini map feature

--- a/options.html
+++ b/options.html
@@ -42,6 +42,10 @@ input, select, label{vertical-align:baseline;}
 			<input type="checkbox" id="shouldAutoCopy" />
 			<label for="shouldAutoCopy" id="shouldAutoCopyLabel"></label>
 		</li>
+		<li>
+			<input type="checkbox" id="enableMiniMap" />
+			<label for="enableMiniMap" id="enableMiniMapLabel"></label>
+		</li>
 		<li class="action">
 			<button id="submit"></button><button id="default"></button>
 		</li>
