--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ $ git checkout gh-pages
 var selectionLengthLimit = 3;
 var hotKey;
 var hotKeyFlag = false;
-var enableMiniMap = true;
+var enableMiniMap = "true";
 var keyCode = null;
       
 //if there is a selection
