add case sensitive feature improve consistent experience when highlight displayed and ctrl+c pressed

--- a/options.html
+++ b/options.html
@@ -46,6 +46,10 @@ input, select, label{vertical-align:baseline;}
 			<input type="checkbox" id="enableMiniMap" />
 			<label for="enableMiniMap" id="enableMiniMapLabel"></label>
 		</li>
+		<li>
+			<input type="checkbox" id="caseSensitive" />
+			<label for="caseSensitive" id="caseSensitiveLabel"></label>
+		</li>
 		<li class="action">
 			<button id="submit"></button><button id="default"></button>
 		</li>
